# fantasy-football-draft-board-v2

./: .env  .gitignore  .nixpkgs-version  .replit  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  DOCKER_NIX_SUMMARY.md  DOMAIN_SETUP.md  Dockerfile.backend  Dockerfile.frontend  JUSTFILE_GUIDE.md  LOCAL_DEVELOPMENT.md  Makefile  NIX_DOCKER_MIGRATION.md  NIX_GUIDE.md  README.md  deploy.yaml  docker-compose.nix.yml  docker-compose.override.yml  docker-compose.yml  flake.nix  justfile  replit.nix  shell.nix
backend/: Cargo.toml  Dockerfile  rust-toolchain.toml
backend/.cargo/: config.toml
backend/.sqlx/: query-4ce8cae31f4518cb6531cc7d8c080b0f76ab58e274a2a2b6bd13429e1eab9add.json  query-5591ee337a02df0e67ade911cda623dbd688b9611d211275ba1db687b91e01de.json  query-89cb4a24e42b0d23005011a3a5ab3a90a8a40997c06348e0417c7613e06c605a.json  query-a4901ccb8c51846778dcf68acfa82f7c0bc0ccb18608dff425e08875bbe4595f.json  query-aa4c00274a977c57f95599d9d8615ca5c395d612b4a08f53689cb0e983b5c5b1.json  query-b8fab8dba6f209be1f6581caee6665eb4d069c84b3b1ab1b115df03e82fba89b.json  query-dcc8e2db499c7174cd4c7809bbdf3fcde57da62e1b0bcf48f8d79b62b3ae6d12.json  query-e9a1f44ca8ef05d95e196ed220c2fa96b36ec9661729a7495b559a3110e5eda7.json  query-ebb94116648f4d72141727b9b6965cd73598eb501f7e3740ee5c26a34be6ff93.json  query-f01d03e7f9cdd08bac6a4529050f111e8bdf8afc3dee67c7c315c6c43a8cc2ec.json
backend/src/: constants.rs  main.rs
backend/src/database/: connection.rs  mod.rs  operations.rs  pool.rs  refresh_player_data.sql  setup.rs  setup_db.sql
backend/src/models/: drafted_player.rs  fantasy_data_update.rs  mod.rs  player.rs  players.rs  rankings.rs  requests.rs  scraper.rs  stats.rs  user.rs  users.rs
backend/src/routes/: draft.rs  drafted_players.rs  fantasy_data.rs  mod.rs  player.rs  players.rs  scrape.rs  user.rs  users.rs  utils.rs
backend/src/scrapers/: mod.rs  player_bio_scraper.rs  player_scraper.rs  players_scraper.rs  rankings_scraper.rs  stats_scraper.rs
backend/src/scripts/: setup_db.sh
backend/src/services/: draft_service.rs  fantasy_data_service.rs  mod.rs  scraper_service.rs
backend/src/utils/: helpers.rs
deploy/: nginx.conf
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  svelte.config.js  vite.config.ts
nginx/: nginx.conf
scripts/: deploy.sh  docker-health-check.sh  docker-setup.sh  health-check.sh  (+5 more)
(+40 files in other folders)
