[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.82"
dotenv = "0.15.0"
futures = "0.3.30"
headless_chrome = "1.0.13"
lazy_static = "1.5.0"
once_cell = "1.19.0"
playwright = "0.0.20"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.21.0"
select = "0.6.0"
serde = "1.0.210"
serde_json = "1.0.125"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "time", "chrono"] }
sxd-xpath = "0.4.2"
tokio = { version = "1.39.2", features = ["full"] }
xmltree = "0.11.0"
url = "2.4.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11.5"
actix-web = "4.4"
time = { version = "0.3", features = ["serde"] }
