[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
anyhow = "1.0.86"
async-trait = "0.1.82"
chrono = "0.4"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.30"
headless_chrome = "1.0.13"
lazy_static = "1.5.0"
log = "0.4"
once_cell = "1.19.0"
playwright = "0.0.20"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.22.0"
select = "0.6.0"
serde = "1.0.210"
serde_json = "1.0.125"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "time", "chrono"] }
strum = { version = "0.26.3", features = ["derive"] }
sxd-xpath = "0.4.2"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.39.2", features = ["full"] }
url = "2.4.0"
xmltree = "0.11.0"
