[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "^4.11"
anyhow = "^1.0"
async-trait = "^0.1"
chrono = "^0.4"
dotenv = "^0.15"
env_logger = "^0.11"
futures = "^0.3"
headless_chrome = "^1.0"
lazy_static = "^1.5"
log = "^0.4"
once_cell = "^1.21"
regex = "^1.11"
reqwest = { version = "^0.12", features = ["blocking"] }
round = "^0.1"
scraper = "^0.23"
serde = "^1.0"
serde_json = "^1.0"
sqlx = { version = "^0.8", features = ["runtime-tokio-native-tls", "postgres", "time", "chrono"] }
strum = { version = "^0.27", features = ["derive"] }
time = { version = "^0.3", features = ["serde"] }
tokio = { version = "^1.4", features = ["full"] }
url = "^2.5"
